--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
-		<title>Togas y Birretes Carrilo </title>
+		<title>Togas y Birretes Carrillo </title>
 		<link rel="stylesheet" href="styles.css" />
 	</head>
 	<body>
