--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 			<br>
 			<h2>¿Qué necesitas?</h2>
 			<p>Togas, birretes y esclavinas para todos los grados de la mejor calidad y en diferentes colores. <br>
-				Renta desde una hasta las que necesite para el evento de toda tu generació. <br>
-				Renta para toda el área metropolitana de Saltillo y su zona conurbada <br> <br>
+				Renta desde una hasta las que necesite para el evento de toda tu generación. <br>
+				Renta para toda el área metropolitana de Saltillo y su zona conurbada. <br> <br>
 			</p>
 			<h2>¡¡ Todo lo que necesitas para tu graduación !!</h2>
 						<p>Colores y Tallas de Togas contamos con una amplia variedad de colores:
